tests/ui/specialization/issue-111232.stderr
error[E0520]: `from` specializes an item from a parent `impl`, but that item is not marked `default`
  --> $DIR/issue-111232.rs:6:5
   |
LL |     fn from(s: S) -> S {
   |     ^^^^^^^^^^^^^^^^^^
   |
   = note: parent implementation is in crate `core`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0520`.
